@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Handle invalid file descriptors more gracefully.
+ socket/init.c: reset a file descriptor when closing it.
+ socket/loop.c: try to look up bad file descriptors and drop them.
+Nicolas Weeger 2008-01-04
+
 Fix crash on invalid bulletwalls.
  server/time.c: ensure other_arch is not NULL.
 Nicolas Weeger 2008-01-03
